2005-09-25  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/lang/reflect/ClassSignatureParser.java,
	gnu/java/lang/reflect/GenericSignatureParser.java,
	gnu/java/lang/reflect/MethodSignatureParser.java: New files.
	* java/lang/Class.java
	(constructor): Changed type to generic type.
	(cast, getEnumConstants): Added cast.
	(getGenericInterfaces, getGenericSuperclass, getTypeParameters):
	Implemented.
	* vm/reference/java/lang/VMClass.java
	(getSimpleName, getDeclaredAnnotations, getCanonicalName,
	getEnclosingClass, getEnclosingConstructor, getEnclosingMethod,
	isAnonymousClass, isLocalClass, isMemberClass):
	Removed generic types from signatures.
	(getGenericInterfaces, getGenericSuperclass, getTypeParameters):
	Removed.
	(getClassSignature): New method.
	* vm/reference/java/lang/reflect/Constructor.java
	(getTypeParameters): Implemented.
	* vm/reference/java/lang/reflect/Method.java
	(getTypeParameters, getSignature): New methods.

2005-09-25  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/System.java,
	vm/reference/java/lang/VMSystem.java: Removed generic type
	from VMSystem.environ() signature.

2005-09-25  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/MalformedParameterizedTypeException.java: Removed.

2005-09-25  Tom Tromey  <tromey@redhat.com>

	* java/util/Formatter.java (lineSeparator): Use SystemProperties.

2005-09-24  Tom Tromey  <tromey@redhat.com>

	* java/util/FormattableFlags.java (PLUS, SPACE, ZERO, COMMA,
	PAREN): New constants.
	* java/util/UnknownFormatConversionException.java
	(UnknownFormatConversionException): Set exception text.
	* java/util/IllegalFormatException.java (IllegalFormatException):
	New constructor.
	* java/util/FormatFlagsConversionMismatchException.java
	(FormatFlagsConversionMismatchException): Set exception text.
	* java/lang/String.java (format): New methods.
	* java/io/PrintStream.java (printf): New methods.
	(format): Likewise.
	* java/io/PrintWriter.java (printf): New methods.
	(format): Likewise.